--- a/index.liquid
+++ b/index.liquid
@@ -4,6 +4,7 @@
 		<title>{{ blog_name }}</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
 		<style>
 			pre {border-radius: 5px;}
 		</style>
