--- a/index.liquid
+++ b/index.liquid
@@ -28,6 +28,7 @@
 		</div>
 		<footer class="footer">
             <div class="content has-text-centered">
+				<h6 class="title is-6"><a href="https://github.com/traxys/viz">Source code</a></h6>
                 <p>
                 The source code is licensed
                 <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
